# LaSSI

./: .gitignore  .gitmodules  AUTHORS  README.md  alice_bob.yaml  config.yaml  connection.yaml  crawl_conf.yaml  main.py  newcastle_orig.yaml  newcastle_slim.txt  pyproject.toml  sentences.yaml  start_services.sh  viz2.py  web_server.py  ws_request_example.json
LaSSI/: Configuration.py  LaSSI.py  SentenceLoader.py  SystemConf.py  __init__.py
LaSSI/Parmenides/: Prepositions.py  SentenceStructure.py  make_ontology_from_raw.py  paremenides.py  turtle.ttl
LaSSI/cypher/: cypher_queries.py
LaSSI/external_services/: ConceptNet5.py  Existentials.py  GeoNames.py  ParmenidesFuzzyMatch.py  Services.py  Stanza.py  utils.py
LaSSI/files/: FileDumpUtilities.py  JSONDump.py  ReadFileContent.py
LaSSI/ner/: AssignTypeToSingleton.py  CreateFinalKernel.py  MergeSetOfSingletons.py  ParmenidesLogicalRewriting.py  ResolveBasicTypes.py  ResolveMultiEntity.py  a_resolve_basic_types.py  node_functions.py  resolve_multi_entity.py  string_functions.py  (+1 more)
extra/: deserialize.py
raw_data/: abstract_entity_concepts.txt  logical_analysis.json  logical_analysis2.json  prepositions.json  prototypical_prepositions.txt  sentence_analysis.json  sentences_examples.json  transitive_verbs.txt  units_of_measure.txt  verb_of_movement.txt  where_to_find.json
test_sentences/: 170.yaml  all_concept.yaml  all_first_dataset.yaml  cat_mouse.yaml  copula_test.yaml  multiple_kernels.yaml  newcastle_permutated.yaml  short_sentences.yaml  single_node.yaml  subsentence_markers.yaml  you_need.yaml
(+105 files in other folders)
